Improve resizing of carousel when window is resized. Make sure that carousel aspect ratio is always 16/9. Fix fancybox visibility on small screens. Scroll top when starting to upload files. Improve image form responsivity. Add side padding to "thank you" page.

--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -63,6 +63,8 @@ span.button.btn-danger:hover {
 }
 
 h3 {
+	padding-left: 1rem;
+	padding-right: 1rem;
 	padding-bottom: 2rem;
 	font-weight: inherit;
 	font-size: inherit;
