--- a/reactapp/src/styles/carousel.css
+++ b/reactapp/src/styles/carousel.css
@@ -1,6 +1,5 @@
 .carousel {
 	height: 100%;
-	min-height: 300px;
 	margin: auto;
 }
 
