--- a/reactapp/src/styles/fancyBox.css
+++ b/reactapp/src/styles/fancyBox.css
@@ -1,12 +1,14 @@
 .fancy-wrapper {
-	z-index: 1;
+	z-index: 2000;
 	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
-	padding-top: 6%;
-	padding-bottom: 6%;
+	padding-top: 10%;
+	padding-bottom: 10%;
+	padding-left: 5%;
+	padding-right: 5%;
 	background-color: rgba(100, 100, 110, 0.5);
 	text-align: left;
 }
