--- a/reactapp/src/styles/final_page.css
+++ b/reactapp/src/styles/final_page.css
@@ -1,3 +1,9 @@
-.upload-info {
+.final-page .upload-info {
 	font-size: 1rem;
+}
+
+.final-page .more-info,
+.final-page .upload-info {
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
